--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,47 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-altair=4.2.0=pypi_0
-attrs=22.2.0=pypi_0
-blinker=1.5=pypi_0
-bzip2=1.0.8=h620ffc9_4
-ca-certificates=2023.01.10=hca03da5_0
-cachetools=5.3.0=pypi_0
-certifi=2022.9.24=py311hca03da5_0
-charset-normalizer=3.0.1=pypi_0
-click=8.1.3=pypi_0
-decorator=5.1.1=pypi_0
-entrypoints=0.4=pypi_0
-gitdb=4.0.10=pypi_0
-gitpython=3.1.30=pypi_0
-idna=3.4=pypi_0
-importlib-metadata=6.0.0=pypi_0
-jinja2=3.1.2=pypi_0
-jsonschema=4.17.3=pypi_0
-libffi=3.4.2=hca03da5_6
-markdown-it-py=2.1.0=pypi_0
-markupsafe=2.1.2=pypi_0
-mdurl=0.1.2=pypi_0
-ncurses=6.3=h1a28f6b_3
-numpy=1.24.1=pypi_0
-openssl=1.1.1s=h1a28f6b_0
-packaging=23.0=pypi_0
-pandas=1.5.3=pypi_0
-pillow=9.4.0=pypi_0
-pip=22.3.1=pypi_0
-protobuf=3.20.3=pypi_0
-pyarrow=10.0.1=pypi_0
-pydeck=0.8.0=pypi_0
-pygments=2.14.0=pypi_0
-pympler=1.0.1=pypi_0
-pyrsistent=0.19.3=pypi_0
-python=3.11.0=hc0d8a6c_2
-python-dateutil=2.8.2=pypi_0
-pytz=2022.7.1=pypi_0
-pytz-deprecation-shim=0.1.0.post0=pypi_0
-readline=8.2=h1a28f6b_0
-requests=2.28.2=pypi_0
-rich=13.2.0=pypi_0
-semver=2.13.0=pypi_0
-setuptools=65.5.0=py311hca03da5_0
-six=1.16.0=pypi_0
-smmap=5.0.0=pypi_0
-sqlite=3.40.1=h7a7dc30_0
-streamlit=1.17.0=pypi_0
-tk=8.6.12=hb8d0fd4_0
-toml=0.10.2=pypi_0
-toolz=0.12.0=pypi_0
-tornado=6.2=pypi_0
-typing-extensions=4.4.0=pypi_0
-tzdata=2022.7=pypi_0
-tzlocal=4.2=pypi_0
-urllib3=1.26.14=pypi_0
-validators=0.20.0=pypi_0
-wheel=0.37.1=pyhd3eb1b0_0
-xz=5.2.10=h80987f9_1
-zipp=3.11.0=pypi_0
-zlib=1.2.13=h5a0b063_0
+altair==4.2.0
+attrs==22.2.0
+blinker==1.5
+cachetools==5.3.0
+certifi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_0dbts0itox/croot/certifi_1669749553188/work/certifi
+charset-normalizer==3.0.1
+click==8.1.3
+decorator==5.1.1
+entrypoints==0.4
+gitdb==4.0.10
+GitPython==3.1.30
+idna==3.4
+importlib-metadata==6.0.0
+Jinja2==3.1.2
+jsonschema==4.17.3
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+numpy==1.24.1
+packaging==23.0
+pandas==1.5.3
+Pillow==9.4.0
+protobuf==3.20.3
+pyarrow==10.0.1
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+requests==2.28.2
+rich==13.2.0
+semver==2.13.0
+six==1.16.0
+smmap==5.0.0
+streamlit==1.17.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+typing_extensions==4.4.0
+tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.14
+validators==0.20.0
+watchdog==2.2.1
+zipp==3.11.0
