--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ altair==4.2.0
 attrs==22.2.0
 blinker==1.5
 cachetools==5.3.0
+certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
 decorator==5.1.1
@@ -12,13 +13,16 @@ idna==3.4
 importlib-metadata==6.0.0
 Jinja2==3.1.2
 jsonschema==4.17.3
+kaleido @ file:///home/conda/feedstock_root/build_artifacts/python-kaleido_1615204619408/work
 markdown-it-py==2.1.0
 MarkupSafe==2.1.2
 mdurl==0.1.2
 numpy==1.24.1
 packaging==23.0
 pandas==1.5.3
+patsy==0.5.3
 Pillow==9.4.0
+plotly==5.13.0
 protobuf==3.20.3
 pyarrow==10.0.1
 pydeck==0.8.0
@@ -30,10 +34,13 @@ pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
 requests==2.28.2
 rich==13.2.0
+scipy==1.10.0
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
+statsmodels==0.13.5
 streamlit==1.17.0
+tenacity==8.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
