--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ idna==3.4
 importlib-metadata==6.0.0
 Jinja2==3.1.2
 jsonschema==4.17.3
-kaleido @ file:///home/conda/feedstock_root/build_artifacts/python-kaleido_1615204619408/work
+kaleido==0.2.1
 markdown-it-py==2.1.0
 MarkupSafe==2.1.2
 mdurl==0.1.2
