--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 altair==4.2.0
+appnope==0.1.3
+asttokens==2.2.1
 attrs==22.2.0
+backcall==0.2.0
 blinker==1.5
 cachetools==5.3.0
 certifi==2022.12.7
@@ -7,23 +10,33 @@ charset-normalizer==3.0.1
 click==8.1.3
 decorator==5.1.1
 entrypoints==0.4
+executing==1.2.0
 gitdb==4.0.10
 GitPython==3.1.30
 idna==3.4
 importlib-metadata==6.0.0
+ipython==8.9.0
+jedi==0.18.2
 Jinja2==3.1.2
 jsonschema==4.17.3
 kaleido==0.2.1
 markdown-it-py==2.1.0
 MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
 mdurl==0.1.2
 numpy==1.24.1
 packaging==23.0
 pandas==1.5.3
+parso==0.8.3
 patsy==0.5.3
+pexpect==4.8.0
+pickleshare==0.7.5
 Pillow==9.4.0
 plotly==5.13.0
+prompt-toolkit==3.0.36
 protobuf==3.20.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pyarrow==10.0.1
 pydeck==0.8.0
 Pygments==2.14.0
@@ -38,16 +51,19 @@ scipy==1.10.0
 semver==2.13.0
 six==1.16.0
 smmap==5.0.0
+stack-data==0.6.2
 statsmodels==0.13.5
 streamlit==1.17.0
 tenacity==8.1.0
 toml==0.10.2
 toolz==0.12.0
 tornado==6.2
+traitlets==5.9.0
 typing_extensions==4.4.0
 tzdata==2022.7
 tzlocal==4.2
 urllib3==1.26.14
 validators==0.20.0
 watchdog==2.2.1
+wcwidth==0.2.6
 zipp==3.11.0
